config("config") {
  include_dirs = [ "include" ]
}

group("all") {
  testonly = true

  deps = [
    ":vtlib",
  ]
}

static_library("vtlib") {
  public_deps = [
    "src:vtlib_impl",
  ]
}

source_set("headers") {
  sources = [
    "include/vtlib/cell.h",
    "include/vtlib/character.h",
    "include/vtlib/character_decoder.h",
    "include/vtlib/color.h",
    "include/vtlib/terminal.h",
    "include/vtlib/token.h",
  ]

  public_configs = [ ":config" ]

  deps = [
    ":headers_internal",
  ]
}

source_set("headers_internal") {
  visibility = [
    ":headers",
    "src/*",
  ]

  sources = [
    "include/vtlib/internal/input.h",
  ]

  public_configs = [ ":config" ]
}
