config("config") {
  include_dirs = [ "include" ]
}

group("all") {
  testonly = true

  deps = [
    ":vtlib",
  ]
}

static_library("vtlib") {
  public_deps = [
    "src:vtlib_impl",
  ]
}

source_set("headers") {
  sources = [
    "include/vtlib/cell.h",
    "include/vtlib/character.h",
    "include/vtlib/character_decoder.h",
    "include/vtlib/character_encoding.h",
    "include/vtlib/codepoint.h",
    "include/vtlib/color.h",
    "include/vtlib/coordinates.h",
    "include/vtlib/display_updates.h",
    "include/vtlib/terminal.h",
  ]

  public_configs = [ ":config" ]
}
