import("//testing/test.gni")

source_set("vtlib_impl") {
  sources = [
    "ascii_character_decoder.cc",
    "ascii_character_decoder.h",
    "character_decoder.cc",
    "tokenizer.cc",
    "utf8_character_decoder.cc",
    "utf8_character_decoder.h",
  ]

  public_deps = [
    "//:headers",
  ]
}

group("tests") {
  testonly = true

  deps = [
    ":tokenizer_test",
  ]
}

test("tokenizer_test") {
  sources = [
    "tokenizer_unittest.cc",
  ]

  deps = [
    ":vtlib_impl",
  ]
}
