import("//testing/test.gni")

source_set("vtlib_impl") {
  sources = [
    "ascii_character_decoder.cc",
    "ascii_character_decoder.h",
    "character_decoder.cc",
    "terminal.cc",
    "tokenizer.cc",
    "utf8_character_decoder.cc",
    "utf8_character_decoder.h",
  ]

  public_deps = [
    "//:headers",
  ]
}

group("tests") {
  testonly = true

  deps = [
    ":tokenizer_test",
    ":utf8_character_decoder_test",
  ]
}

test("tokenizer_test") {
  sources = [
    "tokenizer_unittest.cc",
  ]

  deps = [
    ":vtlib_impl",
  ]
}

test("utf8_character_decoder_test") {
  sources = [
    "utf8_character_decoder_unittest.cc",
  ]

  deps = [
    ":vtlib_impl",
  ]
}
