import("//testing/test.gni")

source_set("vtlib_impl") {
  sources = [
    "ascii_character_decoder.cc",
    "ascii_character_decoder.h",
    "character_decoder.cc",
    "terminal.cc",
    "terminal_impl.cc",
    "terminal_impl.h",
    "utf8_character_decoder.cc",
    "utf8_character_decoder.h",
  ]

  public_deps = [
    "//:headers",
  ]
}

group("tests") {
  testonly = true

  deps = [
    ":utf8_character_decoder_test",
  ]
}

test("utf8_character_decoder_test") {
  sources = [
    "utf8_character_decoder_unittest.cc",
  ]

  deps = [
    ":vtlib_impl",
  ]
}
